RESOLVED FIXED71623
animation-timing-function falls back to ease when overriding animation-name
https://bugs.webkit.org/show_bug.cgi?id=71623
Summary animation-timing-function falls back to ease when overriding animation-name
Lea Verou
Reported 2011-11-06 02:21:16 PST
If you use the animation shorthand without an animation-name and then use animation-name separately, the easing fallsback to the initial value (ease), instead of the specified one (linear). However, the shorthand declaration isn't dropped entirely, as the duration and iteration-count behave as expected. Firefox does not have this problem, as can be seen by the more generic version of the testcase http://jsfiddle.net/leaverou/zXPzY/43/show (which uses -prefix-free to add the prefixes, unlike the testcase which only uses -webkit- and no scripts). The issue is also reproducible in Webkit nightlies.
Attachments
Patch (6.73 KB, patch)
2012-02-29 13:41 PST, Igor Trindade Oliveira
simon.fraser: review+
webkit.review.bot: commit-queue-
Patch (6.76 KB, patch)
2012-03-02 11:28 PST, Igor Trindade Oliveira
no flags
Radar WebKit Bug Importer
Comment 1 2011-11-07 09:43:00 PST
Igor Trindade Oliveira
Comment 2 2012-02-29 13:41:53 PST
Created attachment 129511 [details] Patch Proposed patch.
WebKit Review Bot
Comment 3 2012-02-29 17:29:23 PST
Comment on attachment 129511 [details] Patch Attachment 129511 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11766102 New failing tests: compositing/animation/computed-style-during-delay.html animations/stop-animation-on-suspend.html compositing/animation/animation-compositing.html fast/css/transform-inline-style-remove.html
Igor Trindade Oliveira
Comment 4 2012-03-02 11:28:08 PST
Created attachment 129929 [details] Patch Proposed patch v2.
WebKit Review Bot
Comment 5 2012-03-02 13:41:09 PST
Comment on attachment 129929 [details] Patch Clearing flags on attachment: 129929 Committed r109610: <http://trac.webkit.org/changeset/109610>
WebKit Review Bot
Comment 6 2012-03-02 13:41:15 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 7 2012-04-23 13:39:24 PDT
This apparently caused bug 84533.
Note You need to log in before you can comment on or make changes to this bug.