animation-timing-function falls back to ease when overriding animation-name https://bugs.webkit.org/show_bug.cgi?id=71623

Source/WebCore:

In this patch the animation name needs to be the first value declared, if
a different value is found, we do not check for the animation name again.

Reviewed by Dean Jackson.

Test: animations/animation-shorthand-overriding.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseAnimationShorthand):

LayoutTests:

Add a test to verify if the override the animation-name property works when the parent
animation did not set the animation name.

Reviewed by Dean Jackson.

* animations/animation-shorthand-overriding-expected.txt: Added.
* animations/animation-shorthand-overriding.html: Added.


Canonical link: https://commits.webkit.org/97285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109610 268f45cc-cd09-0410-ab3c-d52691b4dbfc